app/assets/stylesheets/application.css.scss
$baseGrey: #292728;
$lightGrey: #999999;
$veryLightGrey: lighten($baseGrey, 80%);
$baseRed: #b0242f;
$flameOrange: #FF9100;
$headingsFontFamily: 'Roboto Condensed', sans-serif;
$baseFontSize: 16px;
$baseLineHeight: 24px;
$transitionDuration: 0.05s;
$dropdownLinkBackgroundHover: $baseRed;
$gridGutterWidth: 30px;
$viewportWidth: 1050px + (2 * $gridGutterWidth);

$navbarHeight: 90px;
$footerHeight: 240px;
$textColor: $baseGrey;

$facebookBlue: #4c66a4;
$twitterTeal: #9AE4E8;

@import "bootstrap";
@import "font-awesome";
@import "modules/**/*";

h1, h2, h3, h4, h5, h6 {
  font-weight: 300;
}

.btn.btn-mini {
  font-size: 10.5px;
  line-height: 18px;
}

.label {
  border-radius: 0;
  font-weight: 400;
  text-transform: uppercase;
}

html, body {
  height: 100%;
}

body {
  font-weight: 300;
  line-height: 28px;
}

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto 0 -$footerHeight;
  min-width: $viewportWidth;
}

#push, #footer {
  height: $footerHeight;
}

#header {
  background-color: $veryLightGrey;
  border-bottom: 1px solid #ddd;

  .navbar {
    margin-bottom: 0;
  }
}

a {
  color: $lightGrey;
  &:hover { color: $baseRed; text-decoration: none; }
}

a {
  > h1, > h2, > h3 {
    color: $baseRed;
  }
}

article.post, article.episode {
  > header {
    margin-bottom: 20px;
  }

  section.body {
    clear: both;
  }
}

ul.social-icons {
  margin: 0;
  padding: 0;
  float: left;

  > li {
    float: left;
    padding: 0;
    margin: 5px 5px 0 0;
    line-height: 18px;
    > a.btn { margin-top: -1px; }
  }
}

nav.navbar-inner {
  background: none;
  border: none;
  box-shadow: none;
  border-radius: 0;

  a.brand {
    background: image-url("sword_flameless.png") 0 0 no-repeat;
    background-color: $baseRed;
    background-size: 300px 60px;
    width: 300px;
    height: 60px;
    padding: 0;
    margin-top: 10px;
    -webkit-transition: background-color 0.3s ease;
    transition: background-color 0.3s ease;

    &:hover {
      -webkit-transition: background-color 0.3s ease;
      transition: background-color 0.3s ease;
      background-color: $flameOrange;
    }
  }

  li.share-button {
    margin-left: 10px;
    padding-top: 5px;
  }
}

form.navbar-search, form.search-form {
  margin-bottom: 0;
  .control-group {
    display: inline-block;
    position: relative;
    > i {
      position: absolute;
      right: 10px;
      top: 10px;
      color: $veryLightGrey;
      line-height: 14px;
    }
  }
}

.navbar > .navbar-inner > .nav {
  padding: 0;
  margin-left: 20px;

  > li {
    display: inline-block;
    font-weight: bold;
    font-size: 16px;

    > a {
      margin-top: 15px;
      margin-bottom: 0;
      padding: 20px 15px 20px;
      font-size: 16px;
      color: $lightGrey;
      &:hover { color: $baseRed; background: none; }
    }

    &.dropdown.open {
      > .dropdown-toggle {
        background: none;
      }
    }

    ul.dropdown-menu {
      top: 80%;
      border-radius: 0;
      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
    }
  }
}

.container {
  padding-left: $gridGutterWidth;
  padding-right: $gridGutterWidth;
}

#home {
  .current-episode {
    background-size: cover;
    background-position: top left no-repeat;

    .overlay { padding: 30px 0; background-color: rgba(0,0,0,0.7); };

    color: $veryLightGrey;

    .splash-logo {
      padding-top: 30px;
    }

    article.episode {
      padding: 20px 0 30px 0;

      .media-object { display: none; }
      a.action { display: none; }

      .description {
        // Force next piece of content to be same distance regardless of whether
        // episode description uses <p> or <br>.
        margin-bottom: 10px;
        p:last-child { margin: 0; }
      }
    }

    .full-play-controls  {
      .share-episode { background-color: $baseGrey; a { color: $veryLightGrey; } }
    }
  }

  section.past-episodes {
    min-height: 400px;
    margin-bottom: 20px;
  }
}

article {
  a.action {
    background-color: $baseRed;
    color: $veryLightGrey;
    text-transform: uppercase;
    font-size: 12px;
    padding: 3px;
    margin-left: 2px;

    &:hover {
      background-color: $lightGrey;
    }
  }
}

#footer {
  background-color: $baseGrey;
  color: $veryLightGrey;
  min-width: $viewportWidth;

  > .container {
    padding-top: 10px;
  }

  ul.nav {
    > li {
      font-size: 14px;
      line-height: 20px;
      display: inline-block;
      width: 120px;
      border-bottom: 1px solid $lightGrey;
      margin-right: 20px;
      &:hover { a { background: none; } }
      .dropdown-toggle { i { display: none; } &:hover { color: $lightGrey; cursor: default; } }
    }
  }

  ul.dropdown-menu {
    position: auto;
    display: block;
    margin: 4px 0 0 0;
    padding: 0;
    box-shadow: none;
    background: none;
    border: none;
    color: auto;

    > li {
      a { color: $lightGrey; padding: 0; &:hover { color: $baseRed; } }
      &:hover { a { background: none; } }
    }
  }

  .brand {
    margin-top: 10px;
  }
}

#search {
  ul.results {
    li.result {
      border-top: 1px solid #eee;
      margin-bottom: 10px;
      &:first-child { border-top: none; }
      h3, p { margin: 0; }
    }
  }
}

.divider {
  height: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid $baseRed;
}

.breadcrumb {
  background-color: transparent;
  margin-bottom: 0;
  padding: 0;
  a { color: $baseRed; }

  .divider {
    margin: 0;
    height: auto;
    border: none;
  }
}

.main-content {
  padding: 30px 0 30px 30px;
  background-color: white;

  header.span12 {
    h1 {
      font-size: 70px;
      line-height: 80px;
      margin-top: 0;
      margin-bottom: 0;
    }

    p.muted {
      margin-bottom: 0;
    }
  }
}

figure.thumbnail {
  background-color: $veryLightGrey;
  padding: 15px;
  border: 1px solid #ddd;
  margin: 0;
  border-radius: 0;

  figcaption {
    font-size: 12px;
    font-weight: 300;
    margin-top: 14px;
    line-height: 14px;
  }
}

#side-navbar {
  width: 158px;

  &.affix {
    top: 20px;
  }

  .nav {
    li {
      font-size: 24px;
      line-height: 32px;
      padding: 4px;

      &.active a {
        color: $baseRed;
        background-color: $veryLightGrey;
      }
    }
  }
}

ul.grouped {
  $highlightColor: $veryLightGrey;

  > li {
    clear: both;
    border: 1px solid $highlightColor;
    margin-bottom: 20px;

    > h3 {
      background-color: $highlightColor;
      padding-left: 20px;
      margin-top: 0;
      margin-bottom: 0;
    }

    > .items {
      padding: 20px 20px 0 20px;
    }
  }
}

#episodes {
  .episode-and-image {
    .body {
      // Force next piece of content to be same distance regardless of whether
      // episode description uses <p> or <br>.
      margin-bottom: 14px;
      p:last-child { margin: 0; }
    }
  }

  .other-episodes {
    a {
      padding: 30px;
      display: block;
      font-family: $headingsFontFamily;
      font-size: 180%;

      &.next { text-align: right; }
      &:hover {
        @include transition(all 0.4s ease);
        background-color: #ddd;
      }
    }
  }
}

